refactor: WAR adapter pattern (Java EE 7 / WebSphere)
- Generated code targets Java 1.8 (javax.*, no jakarta.*)
- Resource uses @EJB injection to call SynchroneService.process()
- Converter: bidirectional JSON DTO <-> Envelope mapping
- CodeMapper: Envelope return codes -> HTTP status
- DTOs: field names extracted from Envelope paths (getNodeAsString/addNode)
- POM: WAR packaging, javaee-api 7.0, eai-commons-services, eai-midw-connectors
- No direct business logic in Resource (pure adapter)
- 54 tests, 0 failures, BUILD SUCCESS